<resources>
    <string name="app_name">Bangkit BFAA 3</string>
    <string name="user_detail">User Detail</string>
    <string name="app_logo">Logo Aplikasi</string>
    <string name="app_avatar">Gambar Avatar</string>
    <string name="app_username">Username</string>
    <string name="app_name_user">Name</string>
    <string name="app_follower">Followers</string>
    <string name="app_following">Following</string>
    <string name="app_company">Company</string>
    <string name="app_location">Location</string>
    <string name="app_repository">Repository</string>
    <string name="search">Search</string>
    <string name="tab">Tab</string>
    <string name="tv_start">Start Searching First</string>
    <string name="img_start">Image start searching first</string>
    <string name="not_found">Not Found</string>
    <string name="search_hint">Enter User Name</string>
    <string name="app_type">Type</string>
    <string name="detail_followers">%d Followers</string>
    <string name="detail_following">%d Following</string>
    <string name="empty_favorite_user">Empty Favorite User</string>
    <string name="image_empty_favorite_user">Image Empty Favorite User</string>
    <string name="option_general">General</string>
    <string name="option_about">About</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="version">Version 1.3.0 - Created by Alwan Fauzi</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="add_favorite">Added to Favorite User</string>
    <string name="remove_favorite">Removed from Favorite User</string>
</resources>